@@ -94,7 +94,7 @@ class Widget(zope.location.Location):
             if (interfaces.IContextAware.providedBy(self) and
                 not self.ignoreContext):
                 value = zope.component.getMultiAdapter(
-                    (self.context, self.field), 
+                    (self.context, self.field),
                     interfaces.IDataManager).query()
             # Step 1.2.2: If we still do not have a value, we can always use
             #             the default value of the field, id set
@@ -143,7 +143,20 @@ class Widget(zope.location.Location):
 
 
 class SequenceWidget(Widget):
-    """Sequence widget."""
+    """Term based sequence widget base.
+
+    The sequence widget is used for select items from a sequence. Don't get
+    confused, this widget does support to choose one or more values from a
+    sequence. The word sequence is not used for the schema field, it's used
+    for the values where this widget can choose from.
+
+    This widget base class is used for build single or sequence values based
+    on a sequence which is in most use case a collection. e.g.
+    IList of IChoice for sequence values or IChoice for single values.
+
+    See also the MultiWidget for build sequence values based on none collection
+    based values. e.g. IList of ITextLine
+    """
 
     zope.interface.implements(interfaces.ISequenceWidget)
 
