@@ -2,6 +2,14 @@
 CHANGES
 =======
 
+Version Special Fork (2008-??-??)
+---------------------------------
+
+- Feature: The `SequenceDataConverter` and `CollectionSequenceDataConverter`
+  converter classes now ignore values that are not present in the terms when
+  converting to a widget value.
+
+
 Version 1.9.0 (2008-08-26)
 --------------------------
 
